crates/toml_edit/tests/fixtures/invalid/string/basic-out-of-range-unicode-escape-2.stderr
TOML parse error at line 1, column 8
  |
1 | a = "\U00D80000"
  |        ^
Invalid unicode 8-digit hex code
Value is out of range
